--- a/templates/item/create.html.twig
+++ b/templates/item/create.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
     <div class="container">
+        {% include "shared/_notice.html.twig" %}
+
         <h1>
             Create Item
         </h1>
